# aislib

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_script.bat  build_script.sh  create_header_copy.bat  create_symlink.sh
cmake/: aislibConfig.cmake.in
examples/: CMakeLists.txt  binary_message_example.cpp  multipart_example.cpp  nmea_parser.cpp
include/aislib/: ais_message.h  ais_parser.h  base_station_report.h  binary_addressed_message.h  binary_application_ids.h  binary_broadcast_message.h  binary_message.h  bit_vector.h  message_factory.h  multipart_message_manager.h  nmea_utils.h  position_report_class_a.h  position_report_class_b.h  static_and_voyage_data.h  static_data.h
include/aislib/application/: area_notice.h  meteorological_data.h
src/: ais_message.cpp  ais_parser.cpp  base_station_report.cpp  binary_addressed_message.cpp  binary_broadcast_message.cpp  binary_message.cpp  bit_vector.cpp  message_factory.cpp  message_factory_impl.cpp  multipart_message_manager.cpp  nmea_utils.cpp  position_report_class_a.cpp  position_report_class_b.cpp  static_and_voyage_data.cpp  static_data.cpp
src/application/: area_notice.cpp  meteorological_data.cpp
tests/: CMakeLists.txt  binary_message_test.cpp  bit_vector_test.cpp  multipart_message_integration_test.cpp  multipart_message_manager_test.cpp  nmea_utils_test.cpp  position_report_class_a_test.cpp  position_report_class_b_test.cpp
tests/application/: meteorological_data_test.cpp
